# mb-parser

./: CMakeLists.txt  README.md
python/: generate-chain-weights.py
reference-decoder/: mb-print.patch
src/: ReferenceGraph.cpp  ReferenceGraph.h  main.cpp  mb_parser.cpp  structs.h
src/chains/: Graph.cpp  Graph.h  Vertex.cpp  Vertex.h  chain_weights.cpp
